# cpp-SWE-roadmap

./: .gitignore  README.md
week1/MatrixRAII/: CMakeLists.txt
week1/manual_memory_exercise/: CMakeLists.txt  README.md  main.cpp
week1/vector_stats/: README.md  data.txt
week1/vector_stats/src/: compute_stats.cpp  main.cpp
week1_intro/MatrixRAII/: CMakeLists.txt
week1_intro/MatrixRAII/src/: main.cpp
week1_intro/vector_stats/: CMakeLists.txt  README.md  data.txt  main.cpp
week1_intro/vector_stats/include/: compute_stats.h
week1_intro/vector_stats/src/: main.cpp  test_stats.cpp
